# sovereign-os

./: README.md  package-lock.json  telemetry_audit.sh
.github/workflows/: ci.yml  release.yml
pq-core/: .gitignore  CHECKSUM.txt  Cargo.toml  README.md  flake.nix  simulate.sh
pq-core/.cargo/: config.toml
pq-core/.github/workflows/: release.yml
pq-core/crates/pq-crypto/: Cargo.toml
pq-core/crates/pq-crypto/examples/: generate_root.rs  generate_v1_assets.rs
pq-core/crates/pq-crypto/src/: lib.rs
pq-core/crates/pq-daemon/: Cargo.toml  analyze_traffic.py  manifest.json  run_benchmark.sh
pq-core/crates/pq-daemon/examples/: crucible_stress_test.rs  dashboard_simulation.rs  generate_v1_assets.rs  twin_ghost_stress_test.rs
pq-core/crates/pq-daemon/src/: bootloader.rs  canary.rs  causal_buffer.rs  config.rs  crucible.rs  iblt.rs  lib.rs  main.rs  message_state.rs  orchestra.rs  shard_state.rs  signaler.rs  socks_proxy.rs  sovereign_event.rs  test_nip17.rs  verify_api.rs
pq-core/crates/pq-daemon/src/bridge/: metronome.rs  mod.rs  pending.rs  socket.rs
pq-core/crates/pq-dashboard/: run_chaos_load.sh  tailwind.config.js
pq-core/crates/pq-dashboard/src/: App.tsx  index.css
pq-core/crates/pq-dashboard/src-tauri/: Cargo.toml  Info.plist
pq-core/crates/pq-dashboard/src-tauri/src/: commands.rs  lib.rs  main.rs  metrics.rs
pq-core/crates/pq-dashboard/src/components/: FlatlineChart.tsx  MeshGraph.tsx  TerminalLog.tsx  VisualShardCache.tsx
pq-core/crates/pq-dashboard/src/hooks/: useTelemetry.ts
pq-core/crates/pq-dashboard/src/types/: telemetry.ts
pq-core/crates/pq-dht/: Cargo.toml
pq-core/crates/pq-dht/src/: lib.rs
pq-core/crates/pq-identity/: Cargo.toml
pq-core/crates/pq-identity/src/: ephemeral.rs  guardian.rs  lib.rs  pairwise.rs
pq-core/crates/pq-onion/: Cargo.toml
pq-core/crates/pq-onion/src/: delegation.rs  group_tree.rs  lib.rs
pq-core/crates/pq-reputation/: Cargo.toml
pq-core/crates/pq-reputation/src/: lib.rs
pq-core/crates/pq-storage/: Cargo.toml
pq-core/crates/pq-storage/src/: drg.rs  lib.rs  sync.rs  vault.rs
pq-core/crates/pq-stream/: Cargo.toml
pq-core/crates/pq-stream/src/: erasure.rs  lib.rs  receipt.rs
pq-core/crates/pq-transport/: Cargo.toml
pq-core/crates/pq-transport/src/: accounting.rs  auth.rs  config.rs  lib.rs  nat.rs  stun.rs
pq-core/crates/pq-voice/: Cargo.toml
pq-core/crates/pq-voice/src/: handshake.rs  lib.rs
pq-core/crates/sovereign-alloc/: Cargo.toml
pq-core/crates/sovereign-alloc/src/: buddy.rs  lib.rs  pool.rs
pq-core/crates/sovereign-frame/: Cargo.toml
pq-core/crates/sovereign-frame/src/: lib.rs  metronome.rs
pq-core/crates/sovereign-hal/: Cargo.toml
pq-core/crates/sovereign-hal/src/: lib.rs
pq-core/crates/sovereign-hal/src/arch/: aarch64.rs  generic.rs  mod.rs  x86_64.rs
pq-core/crates/sovereign-kernel/: Cargo.toml  README.md  inject_rx_frame.py  linker-aarch64.ld  linker-x86_64.ld  run_qemu.sh  run_qemu_rx_test.sh  verify_bytes.py
pq-core/crates/sovereign-kernel/src/: dma.rs  driver.rs  entry.rs  lib.rs  main.rs  timer.rs  uart.rs
pq-core/crates/sovereign-kernel/src/boot/: mod.rs
pq-core/crates/sovereign-kernel/src/mmu/: aarch64.rs  idt_x86_64.rs  mod.rs  x86_64.rs
pq-core/crates/sovereign-kernel/src/net/: device.rs  mod.rs  stack.rs
pq-core/crates/sovereign-kernel/src/virtio/: mmio.rs  mod.rs  net.rs  queue.rs
pq-core/crates/sovereign-rt/: Cargo.toml
pq-core/crates/sovereign-rt/src/: darwin.rs  lib.rs  linux.rs  log.rs  stub.rs
