[workspace]
resolver = "2"
members = [
    "crates/pq-crypto",
    "crates/pq-identity",
    "crates/pq-transport",
    "crates/pq-daemon", "crates/pq-reputation", "crates/pq-storage", "crates/pq-stream", "crates/pq-dht", "crates/pq-onion",
    "crates/pq-voice",
    "crates/pq-dashboard/src-tauri",
]

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.37", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
blake3 = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Post-quantum crypto primitives
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# QUIC + PQ-TLS
quinn = { version = "0.11", default-features = false, features = ["rustls-aws-lc-rs", "runtime-tokio", "log"] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "prefer-post-quantum", "logging", "std", "tls12"] }
rcgen = "0.13"

# STUN
stunclient = "0.4"
chacha20poly1305 = "0.10"
moka = { version = "0.12", features = ["future"] }

# Tor (Arti)
arti-client = { version = "0.28", features = ["full", "tokio", "native-tls"] }
tor-rtcompat = { version = "0.28", features = ["tokio", "native-tls"] }
tor-socksproto = "0.28"
rusqlite = "0.32"
tokio-rusqlite = "0.6.0"
spin_sleep = "1.2.1"
thread-priority = "1.1.0"
core_affinity = "0.8"
rand_chacha = "0.3"
nix = { version = "0.29", features = ["net", "socket", "time"] }
libc = "0.2"
