[package]
name = "pq-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
pqcrypto-kyber = { workspace = true }
pqcrypto-dilithium = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
pqcrypto-traits = { workspace = true }
