[package]
name = "pq-identity"
version = "0.1.0"
edition = "2021"

[dependencies]
pq-crypto = { path = "../pq-crypto" }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = "0.8"
