[package]
name = "pq-stream"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
blake3.workspace = true
chacha20poly1305.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = "0.8"
reed-solomon-erasure = "6.0"
hex = { workspace = true }
pq-crypto = { version = "0.1.0", path = "../pq-crypto" }
